[workspace]
resolver = "2"
members = ["contracts/*", "common/*", "tests"]

[workspace.dependencies]
soroban-sdk = "20.4.0"
soroban-env-common = "20.2.2"
ethnum = "1.4.0"
arrayref = "0.3.7"
shared = { path = "./common/shared" }
proc_macros = { path = "./common/proc_macros" }
storage = { path = "./common/storage" }
tests = { path = "./tests" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
