[workspace]
resolver = "2"
members = ["contracts/*", "common/*", "tests"]

[workspace.dependencies]
soroban-sdk = "20.5.0"
soroban-env-common = "20.3.0"
ethnum = "1.5"
arrayref = "0.3.7"
paste = "1.0"
shared = { path = "./common/shared" }
proc_macros = { path = "./common/proc_macros" }
storage = { path = "./common/storage" }
tests = { path = "./tests" }
generic_pool = { path = "./contracts/generic_pool" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
