[workspace]
resolver = "2"
members = ["contracts/*", "common/*", "tests"]

[workspace.dependencies]
soroban-sdk = "21.6"
soroban-env-common = "21.2"
ethnum = "1.5"
arrayref = "0.3.8"
shared = { path = "./common/shared" }
proc_macros = { path = "./common/proc_macros" }
storage = { path = "./common/storage" }
tests = { path = "./tests" }
generic_pool = { path = "./common/generic_pool" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
