[package]
name = "fuzz"
version = "0.0.1"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { workspace = true }
arrayref = { workspace = true }
tests = { workspace = true }
hex = "0.4.3"
rand = "0.8.5"
color-print = "0.3.5"
ethnum = "1.4.0"

[[bin]]
name = "fuzz_target"
path = "fuzz_targets/fuzz_target.rs"
test = false
doc = false
