[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }
proc_macros = { workspace = true }
ethnum = { workspace = true }
storage = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints.clippy]
redundant_clone = "warn"
unreadable_literal = "warn"
semicolon_if_nothing_returned = "warn"
or_fun_call = "warn"
